# aws-publisher

./: Cargo.toml  Dockerfile.x86
k8s/: aws-publisher.yaml
src/: main.rs
