[package]
name = "aws-publisher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.13.0"
aws-sdk-costexplorer= "0.13.0"
chrono = "0.4.19"
reqwest = { version = "0.11.11", features = ["json", "blocking", "cookies"] }
serde_json = "1.0.81"
futures = "0.3.21"
tokio = { version = "1", features = ["full"] }

